Update NavBar and App styles, add new components and routes

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 #root {
-  width: 100vw;
+  /* width: 100vw; */
   /* height: 100vh; */
   margin: 0;
-  padding: 0rem;
+  padding: 0;
   font-family: "Nunito", sans-serif;
 }
